erik: fixing a left align in menus, that was a bug

--- a/workflow/public_html/skins/green/style.css
+++ b/workflow/public_html/skins/green/style.css
@@ -271,7 +271,7 @@ TD.mainMenu {
 	left: 46px;
 	top: 72px;
 	direction: ltr;
-	text-align: left;
+	text-align: center;
 }
 
 A.mainMenu {
